# rspotify-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml  taplo.toml
.devcontainer/: devcontainer.json
.github/workflows/: cargo.yml  ci.yml  security_audit.yml
rspotify-cli/: Cargo.toml
rspotify-cli-lib/: Cargo.toml
rspotify-cli-lib/src/: config.rs  currently_playing.rs  currently_playing_data.rs  error.rs  init_spotify.rs  lib.rs  repeat_state.rs  url_convert.rs
rspotify-cli/src/: cli.rs  config.rs  error.rs  main.rs  pretty_duration.rs
src/: cli.rs  config.rs  currently_playing.rs  error.rs  init_spotify.rs  main.rs  ok_or_print_err.rs  pretty_duration.rs  repeat_state.rs  shuffle_state.rs
