[package]
name = "rspotify-cli"
version = "0.1.0"
authors = ["es183923"]
edition = "2021"
rust-version = "1.65"
description = "A cli to get information and control Spotify."
repository = ""
license = "MIT"
keywords = ["spotify", "music"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive", "cargo"] }
dirs = "4.0.0"
rspotify = { version = "0.11.5", features = ["cli"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"

