[package]
name = "rspotify-cli"
version = "0.1.1"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65"
description = "A cli to get information and control Spotify."
repository = "https://github.com/erics118/rspotify-cli"
license = "MIT"
keywords = ["spotify", "music"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.0"
rspotify = { version = "0.11.6", features = ["cli"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }