[package]
name = "rspotify-cli-lib"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive", "cargo", "env"] }
rspotify = { version = "0.11.7", features = ["cli"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
thiserror = "1.0.47"
