[package]
name = "rspotify-cli-lib"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive", "cargo", "env"] }
rspotify = { version = "0.12.0", features = ["cli"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
thiserror = "1.0.48"
