[package]
name = "rspotify-cli"
version = "0.1.2"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65"
description = "A cli to get information and control Spotify."
repository = "https://github.com/erics118/rspotify-cli"
license = "MIT"
keywords = ["spotify", "music"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
rspotify-cli-lib = { path = "../rspotify-cli-lib" }
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive", "cargo", "env"] }
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
