[package]
name = "rspotify-cli"
version = "0.1.2"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65"
description = "A cli to get information and control Spotify."
repository = "https://github.com/erics118/rspotify-cli"
license = "MIT"
keywords = ["spotify", "music"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
rspotify-cli-lib = { path = "../rspotify-cli-lib" }

anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive", "cargo", "env"] }
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
