[package]
name = "rspotify-cli"
version = "0.1.2"
authors = ["erics118"]
edition = "2021"
rust-version = "1.70"
description = "A cli to get information and control Spotify."
repository = "https://github.com/erics118/rspotify-cli"
license = "MIT"
keywords = ["spotify", "music"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
rspotify-cli-lib = { path = "../rspotify-cli-lib" }

anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
config = { version = "0.14", features = ["toml"] }
home = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
